# AutoHog

./: .gitignore  .gitmodules  CMakeLists.txt  Circuit_eval.cpp  HomGate.cpp  LICENSE  README.md  T_construct.py  T_construct_solver.py  build.ys  build_template.ys  config.json  dag2json.py  nohup.out  requirements.txt  run_circuit.py  search_replace.py
Test_Circuit/Dag/: adder_4.pkl  adder_4_opt.pkl  c1355.pkl  c1355_opt.pkl  c432.pkl  c432_opt.pkl  c880.pkl  c880_opt.pkl
Test_Circuit/Json/: adder_4.json  c1355.json  c432.json  c880.json
Verilog_file/: adder_4.json  adder_4.v  c1355.json  c432.json  c880.json
include/: HomGate.h  timer.h
thirdparties/TFHEpp/include/: gatebootstrapping.hpp  tlwe.hpp
thirdparties/TFHEpp/include/params/: 128bit.hpp
thirdparties/TFHEpp/src/: tlwe.cpp
